# spire-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  mcp-config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  task_progress.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
core/: Cargo.toml  README.md
core/.cargo/: config.toml
core/src/: lib.rs  main.rs  main_new.rs
core/src/actors/: README.md  coordinator.rs  llm.rs  memory_graph.rs  mod.rs  progress.rs
core/src/embedder/: README.md  candle_embedder.rs  mod.rs
core/src/framework/: messages.rs  mod.rs  system.rs  trait_.rs
core/src/graph/: README.md  mod.rs
core/src/mcp/: README.md  client.rs  mod.rs  server.rs  tools.rs
core/src/mcp_server/: dispatcher.rs  handler.rs  mod.rs  server.rs
core/src/mcp_server/tools/: list_dir.rs  mod.rs  read_file.rs  sample.rs  write_file.rs
core/src/models/: README.md  analysis.rs  embedding.rs  graph.rs  memory_graph.rs  mod.rs
core/tests/: embedder_test.rs  integration_test.rs  memory_graph_test.rs
doc/: README.md  actors-and-messages.md  agent-implementation-instructions.md  agent-infrastructure.md  extension-core-interface.md  graph-schema.md  json-rpc-protocol.md  messages-and-types.md  packaging-structure.md  test-suite-reference.md  vscode-environment-model.md
extension/: README.md  package-lock.json  package.json  tsconfig.json
extension/src/: commands.ts  extension.ts  mcp-client.ts
extension/src/ui/: chat-panel.ts  status-bar.ts
mcp/mcp-git/: Cargo.toml
mcp/mcp-git/src/: git_ops.rs  main.rs
mcp/mcp-search/src/: search_engine.rs
rust/: Cargo.toml
rust/mcp/mcp-filesystem/: Cargo.toml
rust/mcp/mcp-filesystem/src/: fs_ops.rs  main.rs
rust/mcp/mcp-process/: Cargo.toml
rust/mcp/mcp-process/src/: main.rs  process_manager.rs
rust/mcp/mcp-search/: Cargo.toml
rust/mcp/mcp-search/src/: main.rs
rust/mcp/mcp-terminal/: Cargo.toml
rust/mcp/mcp-terminal/src/: main.rs  terminal_manager.rs
rust/spire-core/: Cargo.toml
rust/spire-core/src/: lib.rs  main.rs
rust/spire-core/src/actors/: coordinator.rs  llm.rs  mcp_client.rs  memory_graph.rs  mod.rs  progress.rs  project_analyzer.rs  project_query.rs  project_sync.rs  system.rs  tools.rs
rust/spire-core/src/analyzer/: mod.rs  models.rs  rust_analyzer.rs  scanner.rs  tree_builder.rs
rust/spire-core/src/analyzer/build_parsers/: cargo.rs  cmake.rs  go.rs  gradle.rs  make.rs  maven.rs  meson.rs  mod.rs  node.rs  python.rs
rust/spire-core/src/embedder/: candle_embedder.rs  mod.rs
rust/spire-core/src/framework/: messages.rs
rust/spire-core/src/mcp/: client.rs  mod.rs
rust/spire-core/src/models/: analysis.rs  embedding.rs  memory_graph.rs
rust/spire-core/src/transport/: mod.rs  socket.rs
rust/spire-core/tests/: integration_tests.rs
rust/tools/project-analyzer/: Cargo.toml
rust/tools/project-analyzer/src/: analyzer.rs  main.rs  models.rs  rust_analyzer.rs  scanner.rs  tree_builder.rs
rust/tools/project-analyzer/src/build_parsers/: cargo.rs  cmake.rs  go.rs  gradle.rs  make.rs  maven.rs  meson.rs  mod.rs  node.rs  python.rs
scripts/: analyze.sh  build-and-install.sh  download-embedding-model.sh  stage-binaries.mjs
spire-core/: Cargo.toml
spire-core/src/: lib.rs  main.rs
spire-core/src/actors/: chat.rs  coordinator.rs  llm.rs  mcp_client.rs  memory_graph.rs  mod.rs  progress.rs  system.rs  tools.rs  vscode_tools.rs
spire-core/src/embedder/: mod.rs
spire-core/src/framework/: actor.rs  messages.rs  mod.rs  system.rs
spire-core/src/graph/: mod.rs
spire-core/src/mcp/: client.rs
spire-core/src/models/: graph.rs  memory_graph.rs  mod.rs
spire-core/src/transport/: mod.rs  stdio.rs
spire-core/tests/: actor_tests.rs  integration_tests.rs
spire-extension/: .vscodeignore  package.json  tsconfig.json
spire-extension/src/: extension.ts
spire-extension/src/client/: bidirectional-client.ts
spire-extension/src/model/: messages.ts  roles.ts
spire-extension/src/server/: transport.ts
spire-extension/src/server/handlers/: diagnostics.ts  editor.ts  symbols.ts  terminal.ts
spire-extension/src/util/: logger.ts
spire-extension/src/webview/: app.js  index.html  style.css
spire-extension/test/: communication.test.mjs  test-harness.mjs
spire-vscode/: README.md  package-lock.json  package.json
spire-vscode/src/: extension.ts
spire-vscode/src/mcp/: client.ts  types.ts
spire-vscode/src/services/: chat.ts  config.ts
spire-vscode/src/webviews/: chat.ts  config.ts
ts/: pnpm-workspace.yaml
ts/spire-extension/: esbuild.config.mjs  package-lock.json  package.json
ts/spire-extension/src/: extension.ts
ts/spire-extension/src/client/: bidirectional-client.ts  environment-client.ts
ts/spire-extension/src/model/: types.ts
ts/spire-extension/src/server/: router.ts
ts/spire-extension/src/server/handlers/: chat.ts  document.ts  git.ts  workspace.ts
ts/spire-extension/src/webview/: app.js  index.html  sidebar-provider.ts  style.css
ts/spire-extension/test/: handler-integration.test.mjs  mock-env-server.mjs
