[package]
name = "spire-rust"
version = "0.1.0"
edition = "2021"
description = "Rust MCP server core for the Spire VS Code extension"

[dependencies]
# MCP protocol
rust-mcp-sdk = "0.10"
rust-mcp-transport = "0.9"
rust-mcp-schema = "0.10"

# Actor framework
tonari-actor = "0.12"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait support
async-trait = "0.1"

# Utilities
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
rand = "0.8"

# Pin time to version compatible with cookie 0.18.1 (transitive dep via reqwest)
time = "=0.3.36"

# ML / Embedding
candle-core = { version = "0.11", features = ["metal"] }
candle-transformers = "0.11"
candle-nn = "0.11"
hf-hub = { version = "1.0.0-rc.1", features = ["blocking"] }
tokenizers = "0.21"
selene-db-core = "1.4.0"
selene-db-graph = "1.4.0"
selene-db-gql = "1.4.0"
selene-db-persist = "1.4.0"

[dev-dependencies]
tracing-test = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
