[workspace]
resolver = "2"
members = [
    "spire-core",
    "mcp/mcp-git",
    "mcp/mcp-process",
    "mcp/mcp-search",
    "mcp/mcp-terminal",
    "mcp/mcp-filesystem",
    "tools/project-analyzer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MCP protocol
rust-mcp-sdk = "0.10"
rust-mcp-transport = "0.9"
rust-mcp-schema = "0.10"

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait support
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1", features = ["v4"] }
