[package]
name = "spire-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Spire core process — Rust actor system with MCP client, runs as VS Code extension subprocess"

[lib]
crate-type = ["lib"]

[[bin]]
name = "spire-core"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-mcp-sdk = { workspace = true }
rust-mcp-transport = { workspace = true }
rust-mcp-schema = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

# HTTP client (for LLM API calls)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Utilities
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing-appender = "0.2"
dirs = "5"

# Pin time to version compatible with cookie 0.18.1 (transitive dep via reqwest)
time = "=0.3.36"

# SeleneDB — graph database with vector search (upstream crates.io)
selene-db-core = { version = "1.4.0", package = "selene-db-core" }
selene-db-graph = { version = "1.4.0", package = "selene-db-graph" }
selene-db-gql = { version = "1.4.0", package = "selene-db-gql" }
selene-db-persist = { version = "1.4.0", package = "selene-db-persist" }

# Candle — ML inference (embedding model, crates.io)
candle-core = "0.11.0"
candle-nn = "0.11.0"
candle-transformers = "0.11.0"

# Hugging Face Hub client (crates.io)
hf-hub = { version = "1.0.0-rc.1", features = ["blocking"] }
tokenizers = "0.21"

# MD5 hashing for embedding cache keys
md-5 = "0.10"

[dev-dependencies]
tracing-test = "0.2"
