[package]
name = "mcp-git"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for git operations (status, diff, log, add, commit, branch, checkout, pull, push)"

[[bin]]
name = "mcp-git"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-mcp-sdk = { workspace = true }
rust-mcp-transport = { workspace = true }
rust-mcp-schema = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Git operations
git2 = "0.19"

[dev-dependencies]
tempfile = "3"
