[package]
name = "mcp-filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for comprehensive filesystem operations (read, write, list, search, move, copy, delete, etc.)"

[[bin]]
name = "mcp-filesystem"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-mcp-sdk = { workspace = true }
rust-mcp-transport = { workspace = true }
rust-mcp-schema = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# File system traversal
walkdir = "2"
globset = "0.4"

# File metadata
filetime = "0.2"

[dev-dependencies]
tempfile = "3"
