[package]
name = "mcp-search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for grep-like content search across files"

[[bin]]
name = "mcp-search"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-mcp-sdk = { workspace = true }
rust-mcp-transport = { workspace = true }
rust-mcp-schema = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# File system traversal
walkdir = "2"
globset = "0.4"

# Regex
regex = "1"

[dev-dependencies]
tempfile = "3"
