[package]
name = "mcp-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for PTY-based interactive terminal sessions"

[[bin]]
name = "mcp-terminal"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-mcp-sdk = { workspace = true }
rust-mcp-transport = { workspace = true }
rust-mcp-schema = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

# PTY support
nix = { version = "0.29", features = ["fs", "term", "ioctl", "process", "signal"] }

[dev-dependencies]
tempfile = "3"
