[package]
name = "project-analyzer"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Analyze a project directory to determine project type, languages, build tools, and directory structure — giving LLMs semantic understanding of a codebase."

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
walkdir = "2"
anyhow = "1"
cargo_metadata = "0.19"
